--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+### LOCAL MYSQL
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/acme_bank
+spring.datasource.username=${USER}
+spring.datasource.password=${PW}
 
+### RAILWAY MYSQL (provided url is missing "jdbc:" so need set custom variable in railway)
+# spring.datasource.url=${JDBC_URL}
+# spring.datasource.username=${MYSQLUSER}
+# spring.datasource.password=${MYSQLPASSWORD}
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
