--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 ### LOCAL MYSQL
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/acme_bank
-spring.datasource.username=${USER}
-spring.datasource.password=${PW}
+spring.servlet.multipart.enabled=true
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/workshop37
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+# DIGITAL OCEAN
+do.storage.access.key=${DO_ACCESS_KEY}
+do.storage.secret.key=${DO_SECRET_KEY}
+do.storage.endpoint=sgp1.digitaloceanspaces.com
+do.storage.endpoint.region=sgp1
 
 ### RAILWAY MYSQL (provided url is missing "jdbc:" so need set custom variable in railway)
 # spring.datasource.url=${JDBC_URL}
 # spring.datasource.username=${MYSQLUSER}
 # spring.datasource.password=${MYSQLPASSWORD}
 # spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
