image upload ok

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 # DIGITAL OCEAN
-do.storage.access.key=${DO_ACCESS_KEY}
-do.storage.secret.key=${DO_SECRET_KEY}
-do.storage.endpoint=sgp1.digitaloceanspaces.com
-do.storage.endpoint.region=sgp1
+# do.storage.access.key=${DO_ACCESS_KEY}
+# do.storage.secret.key=${DO_SECRET_KEY}
+# do.storage.endpoint=sgp1.digitaloceanspaces.com
+# do.storage.endpoint.region=sgp1
 
 ### RAILWAY MYSQL (provided url is missing "jdbc:" so need set custom variable in railway)
 # spring.datasource.url=${JDBC_URL}
